[gd_scene load_steps=2 format=3 uid="uid://map"]

[ext_resource type="Script" path="res://scripts/map.gd" id="1"]

[node name="map" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = 60.0

[node name="Label" type="Label" parent="VBox"]
text = "Map"
horizontal_alignment = 1

[node name="Button" type="Button" parent="VBox"]
text = "Level 1"

[node name="ButtonLevel2" type="Button" parent="VBox"]
text = "Level 2"

[node name="ButtonLevel3" type="Button" parent="VBox"]
text = "Level 3"

[node name="ButtonLevel4" type="Button" parent="VBox"]
text = "Level 4"
